@@ -429,22 +429,4 @@ public class MeshOptions implements Option {
 	public void validate(MeshOptions options) {
 		validate();
 	}
-
-	/**
-	 * Apply the environment variables.
-	 */
-	@JsonIgnore
-	@Override
-	public void overrideWithEnv() {
-		Option.super.overrideWithEnv();
-
-		getClusterOptions().overrideWithEnv();
-		getSearchOptions().overrideWithEnv();
-		getStorageOptions().overrideWithEnv();
-		getHttpServerOptions().overrideWithEnv();
-		getAuthenticationOptions().overrideWithEnv();
-		getImageOptions().overrideWithEnv();
-		getVertxOptions().overrideWithEnv();
-	}
-
 }
